AC_PREREQ(2.57)
AC_INIT(sipxecs-lang-ja, 0.0.4.5.2, sipx-dev@list.sipfoundry.org)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR([stdprompts/01.wav])
AM_INIT_AUTOMAKE(foreign tar-ustar)
m4_include([config/sipXlib2.m4])
AC_SUBST(LANG_ID, ja)
AC_CONFIG_FILES([
  Makefile
  sipxecs-lang-ja.spec
])
AC_OUTPUT
